# macro-research-toolkit

./: .gitignore  README.md  pyproject.toml
data/raw/: sample_prices.csv
scripts/: 01_first_returns_plot.py
src/macro_research_toolkit/: __init__.py
src/macro_research_toolkit/analysis/: __init__.py  returns.py
src/macro_research_toolkit/data/: load_prices.py
src/macro_research_toolkit/viz/: plots.py
tests/: test_returns.py
